[package]
name = "codecrafters-dns-server"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"
rust-version = "1.91"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
dns-server = "0.2.6"
fixed-buffer = "0.3"
rustdns = "0.4.0"
thiserror = "1.0.38"                             # error handling
